    with flow in a porous medium have been added.
  - The constructor of the multidomain problems has changed. They will now be called
    directly from the start.hh, identical to the other problems. The new parameter
    are the TimeManager and the HostGrid.
  - The interfacegridcreator is now available as a new GridCreator type.

* IMMEDIATE INTERFACE CHANGES not allowing/requiring a deprecation period:
  - The use and support for SGrid is dropped. SGrid is deprecated in Dune 2.4.
    Use YaspGrid instead.

* Deprecated PROPERTY and PARAMETER NAMES, to be removed after 2.8: BEWARE: The
  compiler will not print any warning if a deprecated property or parameter name
  is used. However, a run-time warning should appear in the summary lines after
  the corresponding run.

* Deprecated CLASSES/FILES, to be removed after 2.8:
  - The InterfaceMeshCreator has been moved to InterfaceGridCreator and adapted
    to the structure of other grid creators, it can simply be used by specifying
    the GridCreator TypeTag.

* Deprecated MEMBER FUNCTIONS, to be removed after 2.8:
  - The method simulate(Scalar dtInitial, Scalar tEnd) from MultiDomainProblem,
    it is unused and will be dropped.
  - The GnuplotInterface functions are now called without giving a window number.
    If plots should be plotted in different windows, different GnuplotInterface
    objects are now required. This affects also all other plots in the "io" folder.
  - The write() function in plotoverline2d.hh now has an append function, to be
    able to decide whether the previously written file should be kept or not.

* Deprecated protected MEMBER VARIABLES, to be removed after 2.8: BEWARE: Older
  compilers will not print any warning if a deprecated protected member variable
  is used.

* DELETED classes/files, property names, constants/enums,
  member functions, which have been deprecated in DuMuX 2.7:
  Everything listed as deprecated below has been removed.

Differences Between DuMuX 2.6 and DuMuX 2.7